--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,9 @@
 		// Uncomment the next line to use Docker from inside the container. See https://aka.ms/vscode-remote/samples/docker-in-docker for details.
 		// "-v","/var/run/docker.sock:/var/run/docker.sock",
 
+		// Uncomment the next line to mount the user's .oci directory that contains the OCI API key and config files.
+		// "-v", "${env:HOME}${env:USERPROFILE}/.oci:/home/vscode/.oci",
+
 		// Uncomment the next line if you will be using a ptrace-based debugger like C++, Go, and Rust.
 		// "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"
 
